@@ -5,3 +5,4 @@
 2018-07-18	--	v0.1.2	-- Fix
 2018-07-18	--	v0.1.3	-- Fix
 2018-07-23	--	v0.1.4	-- Cosmetic change
+2018-07-30	--	v0.1.5	-- Added possibility to create dns records with multiple ip as target
